tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_to_const_in_scope.fg
/; EXPECT_ERROR: InvalidAssignmentToConstantVariable
const x:int = 10
{
  x = 20
}

